--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,8 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="16dp"
-        android:visibility="invisible"
-        android:onClick="buttonClick"/>
+        android:visibility="invisible"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonStart"
@@ -22,9 +21,8 @@
         app:layout_constraintBottom_toTopOf="@+id/buttonBottom"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonTop"
-        app:layout_constraintEnd_toStartOf="@id/buttonCenter"
         android:visibility="invisible"
-        android:onClick="buttonClick"/>
+        android:layout_marginStart="16dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonCenter"
@@ -34,8 +32,7 @@
         app:layout_constraintEnd_toStartOf="@+id/buttonEnd"
         app:layout_constraintStart_toEndOf="@+id/buttonStart"
         app:layout_constraintTop_toBottomOf="@+id/buttonTop"
-        android:visibility="visible"
-        android:onClick="buttonClick"/>
+        android:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonEnd"
@@ -44,9 +41,8 @@
         app:layout_constraintBottom_toTopOf="@+id/buttonBottom"
         app:layout_constraintTop_toBottomOf="@+id/buttonTop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/buttonCenter"
         android:visibility="invisible"
-        android:onClick="buttonClick"/>
+        android:layout_marginEnd="16dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonBottom"
@@ -56,8 +52,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp"
-        android:visibility="invisible"
-        android:onClick="buttonClick"/>
+        android:visibility="invisible"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnReset"
